update hymnchtv lyrics scale

--- a/atalk/faq.html
+++ b/atalk/faq.html
@@ -80,6 +80,7 @@ ul li {
    
    <div style='clear: both; height: 10px;'></div>
 
+   <div class='innerText'><image src="./img/qrcode_atalk_faq.png" align="right" width="25%" style="margin:5px 0px 20px 15px"/></div>
    <div class='innerText'>This FAQ section is created to provide a better understanding
       to aTalk users on the application features and observed behaviour. This section
       will continuously be updated as inputs are feedback from aTalk users.
