--- a/atalk/faq.html
+++ b/atalk/faq.html
@@ -193,10 +193,10 @@ ul li {
        <li><b>Context Menu</b>: All aTalk context menus are accessed via long click/press on the item. Long press on
          contact item in the main menu will pop up the context menu e.g. to activate Text->Speech for incoming message
          during the chat chat session. <a href=#feature_10>Text to Speech and speech recognition in chat/groupchat session</a></li>
-       <li><b>Heads-up Notification</b>: When there is an incoming call or an incoming message, an heads-up notification
-         will pop-up. The heads-up is used by user to answer or dismiss an incoming call. In the case of the incoming
-         message, the heads-up notification allow user to mark the message as read, or directly reply to the message 
-         without open the chat session. You may put the incoming message heads-up to snooze for half hour.
+       <li><b>Heads-up Notification</b>: When there is an incoming call or an incoming message, a heads-up notification
+         will pop-up. The heads-up notification is used by user to answer or dismiss an incoming call. In the case of
+         the incoming message, the heads-up notification allow user to mark the message as read, or directly reply to
+         the message without open the chat session. You may put the incoming message heads-up to snooze for half hour.
          <a href=#feature_12>aTalk Heads-Up Notification and Quiet-Hours</a></li>
        <li><b>Event Notification</b>: aTalk implements systray notifications for many of the incoming events e.g.
          incoming call (busy, missed, secured), incoming message etc. In many of these events, there are user defined
@@ -222,13 +222,13 @@ ul li {
    <div class='innerText'><image src="./img/atalk_chat_viewpager.png" align="right" width="30%" style="margin:5px 0px 20px 15px"/></div>
 
    <div class='innerText'><b>Heads-up Notification</b></div>
-   <div class='innerText'>Both aTalk incoming call and incomming message use anroid heads-up notifications as UI
-     interface for user action. In order for these two heads-up UI's to work properly, user must ensure the android
-     notification popo-up is enabled. Please refer to the attached screenshot for the correct android notification
-     settings.</div>
-   <div class='innerText'><image src="./img/atalk_heads-up_notification_setting.png" align="inline" width="30%" style="margin:5px 0px 20px 15px"/>
-   <image src="./img/atalk_incoming_call_heads-up.png" align="inline" width="30%" style="margin:5px 0px 230px 15px"/></div>
-
+   <div class='innerText'>Both aTalk incoming call and incomming message use anroid heads-up notifications as an UI
+     interface for user action. In order for these two heads-up UI's to work properly, user must ensure both the android
+     notifications for alert (sound) and popo-up are enabled; set the sound to 'Silent' and disable Vibrate, as aTalk
+     has its own ring tone and vibrator handlers. Please refer to the attached screenshots for the correct android
+     notification settings. The UI may be different pending on android OS version.</div>
+   <div class='innerText'><image src="./img/atalk_heads-up_notification_setting.png" align="left" width="30%" style="margin:5px 0px 20px 15px"/>
+   <image src="./img/atalk_heads-up_notification_settings.png" align="inline" width="30%" style="margin:5px 0px 120px 30px"/></div>
    <hr/>
    <!-- ========================= Account setup ====================== -->
    <div id='subSection'>Account Setup &amp; Login</div>
@@ -1149,8 +1149,8 @@ ul li {
      event occurs.</div>
     <ul>
       <li><image src="./img/atalk_notification_event_incoming.png" align="middle" width="25%" style="margin:5px 5px"/>
-        <b>Event state:</b> Click the button to turn off the notification event. When a notification event
-        is disabled, all the associated actions will also be ignored when the event occurs.</li>
+        <b>Event state:</b> Click the button to toggle on/off the notification event. When a notification event
+        is disabled, all the event associated actions will be ignored when it occurs.</li>
       <li><b>Popup notification:</b> The popup notification is a message that Android displays outside aTalk's UI to
         provide the user with reminder on an occurred event. User may tap the notification to open aTalk or take an
         action directly from the notification.<br/>
@@ -1158,8 +1158,9 @@ ul li {
         temporary disabled e.g. <b>Incoming Message</b> popup is disabled during chat session.
         </li>
       <image src="./img/atalk_notification_event_incoming_call.png" align="right" width="30%" style="margin:5px 0px 0px 15px"/>
-      <li><b>Sound on notification device:</b> Enable the alert playback on the device speaker.</li>
-      <li><b>Sound on playback device:</b> Enable the playback on the device receiver piece. This option takes
+      <li><b>Sound on notification device:</b> Enable the soung playback on the device notification output, normally
+        refers to android speaker. The playback volume follows android notification volume setting.</li>
+      <li><b>Sound on playback device:</b> Enable the sound playback on the device receiver piece. This option takes
         priority over <b>Sound on notification device</b> option if both are enabled; or your device cannot support
         playback on both the speaker and receiver piece.</li>
       <li><b>vibratation:</b> Enable the device vibration mode.</li>
