--- a/hymnchtv/faq.html
+++ b/hymnchtv/faq.html
@@ -110,10 +110,10 @@ ul li {
        <li><a href=#hymnch_0060>[20201231] Hymn media storage and selection algorithm for playback</a></li>
      </ul>
      <ul>
-       <li><a href=#hymnch_0070>[20210216] User defined media configuration</a></li>
+       <li><a href=#hymnch_0070>[20210801] User defined media configuration</a></li>
      </ul>
      <ul>
-       <li><a href=#hymnch_0080>[20201229] User defined media database configuration</a></li>
+       <li><a href=#hymnch_0080>[20210801] User defined media database configuration</a></li>
      </ul>
 
 
@@ -246,15 +246,19 @@ ul li {
        <li><b>教唱</b>: Hymn singing practice. Currently this is only available for 大本诗歌 DaBen HymnType.</li>
        <li><b>唱诗</b>: Hymn singing music with lyrics.</li>
        <li><b>Repeat/Loop Count</b>: Disable/Enable repeat playback with user defined loop count.</li>
-       <li><b>Playback speed</b>: Variable playback speed. The available playback speed varies from 0.7x~1.3x of the
+       <li><b>Playback speed</b>: Variable playback speed. The available playback speed varies from 0.6x~1.4x of the
          orignal hymn tempo.</li>
      </ul>
-       For hymn media playback: user first selects the required MediaType, the desired repeat/loop count and the playback
-       speed; then followed by:
-       <br />a. Click the play button to start;
-       <br />b. Click again to pause the playback;
-       <br />c. Click again to resume playback;
-       <br />d. Long click to stop the playback and return to start of the hymn media.
+
+     Each hymn media button also provides the availabilty staus/indication of the local media content for playback. The
+     button text is greyed when there is no local media file and required to be downloaded online when playback starts.<br/><br/>
+
+     For hymn media playback: user first selects the required MediaType, the desired repeat/loop count and the playback
+     speed; then followed by:
+     <br />a. Click the play button to start;
+     <br />b. Click again to pause the playback;
+     <br />c. Click again to resume playback;
+     <br />d. Long click to stop the playback and return to start of the hymn media.
    </div>
    <div class='innerText'>User may scroll left/right to a different HymnNo lyrics while the hymn playback is in progress.
      The current playing hymn will continue until the end, without any disruption. If user wants to play the newly
@@ -323,13 +327,15 @@ ul li {
    </div>
 
    <span id='hymnch_0070'></span>
-   <div class='blueText'>[20210216] User defined media configuration <a href=#content>{ Content }</a></div>
+   <div class='blueText'>[20210801] User defined media configuration <a href=#content>{ Content }</a></div>
    <div class='innerText'>Hymnchtv allows user to define a given media content playback to be associated with a
-     HymnType/MediaType/HymnNo. The media content can either be a local saved medium file or an url web link, including
-     the youtube shared link. Hymnchtv supports both the video, and audio media playback. The user defined media is 
+     HymnType/MediaType/HymnNo. The media content can either be a local saved medium file, an url link of an online
+     audio/video media address, including the youtube shared link; the url link can also be a downloadable link of 
+     an audio media which can either be in mp3 or midi format. Hymnchtv supports both the video, and audio media playback. The user defined media is 
      primarily meant for the 媒体 MediaType, however you may also apply it to other MediaType [伴奏|教唱|唱诗] if desired.
      Please follow below steps to add a user defined media to associate it with a given HymnType/MediaType/HymnNo.
      <div class='innerText'><image src="./img/hymnchtv_media_record_config.png" align="right" width="25%" style="margin:5px 0px 20px 15px"/></div>
+    <b>Local media file association</b>
      <ul>
        <li>Decide which HymnType/MediaType the media content should be associated with.</li>
        <li>Copy the media file to your android device SDCard location. It is recommended that the file save 
@@ -338,20 +344,21 @@ ul li {
          Use the Folder explorer to select and input the media filepath. Due to android file access security, the
          actual filepath in the <b>媒体链接</b> field entry may be a tmp path.</li>
        <li><b>[诗歌类别|媒体类型]</b>: Using the two given android spinners in the UI, select the associated
-         HymnType/MediaType for the media content.</li>
+         HymnType/MediaType for the selected media content.</li>
        <li><b>诗歌编号</b>: Enter the Hymn Number; check the <b>附歌</b> option if applicable.</li>
        <li>Click the <b>加添</b> button to add/save the media record into the database.</li>
-       <li>This newly added media content will be used for the playback when user selects its associated hymn data i.e.
-         HymnType/MediaType/HymnNo in the lyrics display window.</li>
+         This newly added media content will be used for the playback when user selects its associated hymn data i.e.
+         HymnType/MediaType/HymnNo in the lyrics display window.
        <li><b>删除</b>: Use this button to delete media record that is no further required. If you re-assign/move a medium
          content to a different HymnType, user must peform the re-assignment, then followed by a deletion of the old media 
          record of the previous HymnType manually; else the old media record will remain in the old HymnType database.
          This is not necessary if you are just modified the HymnNo of a media record within the same HymnType category. 
        </li>
+       <li><b>播放</b>: After you have saved the new media record, or selected an item from the media record list; click
+         the 播放 button to play the media content. The playback will be in the hymn score content window for user
+         confirmation.</li>
        <li><b>退出</b>: Click the 退出 button to close the media record listing window, or exit the user defined media
          configuration setup.</li>
-       <li><b>播放</b>: After you have saved the new media record, or selected an item from the media record list; click
-         the 播放 button to play the media content.</li>
      </ul>
    </div>
    <div class='innerText'>Follow the steps given below, if the desired medium content to associate with a given
@@ -373,7 +380,7 @@ ul li {
        <div class='innerText'><image src="./img/hymnchtv_share_sheet.png" align="right" width="25%" style="margin:5px 0px 20px 15px"/></div>
        <li>Click the <b>加添</b> button to add/save the url link into the database.</li>
      </ul>
-    <b>Normal web url link association</b>
+    <b>Normal web media content url link association</b>
      <ul>
        <li>Using a browser e.g. chrome, open the site where your desired media contents reside.</li>
        <li>Click and hold on the desired item object; a pop up window appears showing all the available options for
@@ -393,25 +400,65 @@ ul li {
          i.e. HymnType/MediaType/HymnNo etc to associate with the added web url link.</li>
        <li>Click the <b>加添</b> button to add/save the url link into the database.</li>
      </ul>
+    <b>Online media downloadable url link association</b>
+     <ul>
+    <div class='innerText'><image src="./img/hymnchtv_share_dnlink.png" align="right" width="25%" style="margin:5px 0px 20px 15px"/></div>
+       <li>Using a browser open the site where the desired downloadable media contents reside.</li>
+       <li>Right click  on the desired item object; a pop up window appears showing all the available options for
+         the selected item.</li>
+       <li>Select <b>Copy link address</b> to save a copy of the audio media link in the android clipboard.</li>
+       e.g. downloadable url address: https://www.hymnal.net/zh/hymn/ns/835/f=mid
+       <li>Lauch hymnchtv app, then goes to <b>User media configuration</b> page.</li>
+       <li>Long click on the <b>媒体链接</b> field entry, and select <b>Paste</b> option.</li>
+       <li>Proceed to select and input all other fields in the media configuration window
+         i.e. HymnType/MediaType/HymnNo etc to associate with the added web url link.</li>
+       <li>Click the <b>加添</b> button to add/save the url link into the database.</li>
+     </ul>
+    <b>Hymnchtv shared media record association</b>
+     <br/>Hymnchtv now supports the sharing of the user media record with others. The shared media record can either
+     contains a local copy of the media file and an url link, or just a url link. Both of these cases are shown in the
+     image of the recipient device on the right.  
+     <div class='innerText'><image src="./img/hymnchtv_share_with.png" align="right" width="25%" style="margin:5px 0px 20px 15px"/></div>
+     <ul>
+       <li>For url link sharing without an actual media content, just copy the whole text string of the link.
+       e.g. hymn_bb,336,0,HYMN_MEDIA,https://youtu.be/dNHe_ELI7NU,null</li>
+       <li>Lauch hymnchtv app, then goes to <b>User media configuration</b> page.</li>
+       <li>Long click on the <b>媒体链接</b> field entry, and select <b>Paste</b> option.</li>
+       <li>Click the <b>加添</b> button to add/save the url link into the database.</li><br/>
+
+       <li>For url link sharing with an actual media content: First find and save a copy of the actual media content
+         in the location as given in the shared url link i.e. Download/hymnchtv/hymn_bb/media_media/; and rename the
+         the media file exactly as given in the url link text i.e. ChHymns-0134.mp3.</li>
+       <li>Then made a copy of the url link text, paste and save as before.
+         e.g. hymn_bb,134,0,HYMN_MEDIA,null, /storage/emulated/0/Download/hymnchtv/hymn_bb/media_media/ChHymns-0134.mp3</li>
+
+       <li><b>Note:</b> For the imported link text association, user is not required to enter any of the info below i.e.
+         HymnType/MediaType/HymnNo etc. Hymnchtv will extract all these info from the pasted link text.</li>
+     </ul>
+
+     <li><image src="./img/ic_share.png" width="24" height="24" align="middle" style="margin:5px 5px"/>This button allows
+       user to share the media contents with other. The share with item can be an exported text file indicated in the
+       <b>数据库导入文件</b> entry field; a single media record selected and shown in the entry fields, and the local
+       media file of the shared link if applicable. Due to android share security, user needs to select the recipient twice for
+       sharing of a url link and the actual media content if applicable.</li>
      <li><image src="./img/ic_help.png" width="24" height="24" align="middle" style="margin:5px 5px"/>when user clicks
        on this icon, hymnchtv will display this help content.</li>
   </div>
 
    <span id='hymnch_0080'></span>
-   <div class='blueText'>[[20201225] User defined media database configuration <a href=#content>{ Content }</a></div>
+   <div class='blueText'>[[20210801] User defined media database configuration <a href=#content>{ Content }</a></div>
    <div class='innerText'>Hymnchtv provides other tools to ease user in managing the user defined media record/database.
      All the user defined media configureations are stored in the hymnchtv internal database as media records. The
      included functions provided allow one user to share his media contents setup in the database with another user by
      using the tools described below: 
      <ul>
        <div class='innerText'><image src="./img/hymnchtv_media_db_config.png" align="right" width="25%" style="margin:5px 0px 20px 15px"/></div>
-       <li><b>数库导出</b>: Click this option button to export all the media records in the database, and save them to
-         a normal text file. The exported file is saved in the hymnchtv pre-defined directory 
-         e.g. Download/hymnchtv/import_export/hymn_bb-20201213_142504.txt. The format of the filename used is
-         HymnType-&lt;timestamp>, where HymnType is hymn_xx and the timestamp format is "YYYYMMDD_HHMMSS". The exported file
-         contains only the media records from the currently selected HymnType. If you long click on the button, the
-         file will contain all the media records for all the four defined HymnType's and the file is named with
-         hymn_all-&lt;timestamp>.txt. </li>
+       <li><b>数库导出</b>: Click this option button to export all the media records for all the four defined HymnType's.
+         The exported file is named as hymn_all-&lt;timestamp>.txt, and is saved in the hymnchtv pre-defined directory 
+         e.g. Download/hymnchtv/import_export/hymn_all-20201213_142504.txt. The format of the filename used is
+         Hymn_all-&lt;timestamp>, where the timestamp format is "YYYYMMDD_HHMMSS". If you long click on the button, the
+         file will contain all the media records with url links only and the file is named with
+         hymn_link-&lt;timestamp>.txt.</li>
        <li><b><a href="./index.html#create_export">自建导出</a></b>: Instead of creating an individual media record per user desired media content, as described
          in the <a href='#hymnch_0070'>previous section</a>; one can actually use the auto-create export file for a
          batch media contents import. See below on the actual process and operation.</li>
@@ -421,7 +468,7 @@ ul li {
          records in the database. Scroll up/down to see all the media records. Click on any of the record items, its
          media record info will be updated to the media record fields. User may proceed to edit/update or delete the
          media record in the database. Click the <b>退出</b> button to close the media record listing window.</li>
-       <li><b>数据库导入</b>: Import all the media record contents as defined in the exported txt file into the hymnchtv database.
+       <li><b>数库导入</b>: Import all the media record contents as defined in the exported txt file into the hymnchtv database.
          Each media record will be saved in the respective database per the defined HymnType of the media record.</li>
        <li><b>覆盖现有记录</b> Check this option if you want hymnchtv to overwrite any existing media record in the
          database during the database import process.</li>
