--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -69,6 +69,7 @@
       <li>以最大允许的屏幕大小，同时显示诗歌乐谱和歌词文本</li>
       <li>手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，显示自动加大150%，易于阅读</li>
       <li>媒体播放类别：用户定义媒体，伴奏，教唱，唱诗</li>
+      <li>支持QQ媒体链接、YouTube、谷歌搜索功能</li>
       <li>用户定义媒体内容的支持，即每个诗歌标题的视频和音频以进行播放</li>
       <li>支持安卓共享以添加媒体内容，或来自第三方应用程序的网址链接作为用户定义的媒体内容</li>
       <li>允许导出保存中的用户定义媒体内容，以通过导入与其他安卓设备共享</li>
@@ -76,7 +77,7 @@
       <li>支持用户定义的媒体列表查看器和嵌入式文本编辑器，以简化导出和导入用户定义的媒体操作</li>
       <li>包括嵌入式视频媒体播放器，用于播放用户定义的视频媒体和其他优酷网址</li>
       <li>开发新的音频媒体播放器用户界面。给用户最大的控制权</li>
-      <li>可调媒体播放速度：0.7x〜1.3x；和可选重复次数播放</li>
+      <li>可调媒体播放速度：0.6x〜1.4x；和可选重复次数播放</li>
       <li>网络媒体下载仅一次；内部存储，供以后播放</li>
       <li>媒体播放同步于用户新选诗歌编号，无需返回主页</li>
       <li>诗歌媒体播放以当前状态继续，直到歌曲结束；然后再同步用户新选诗歌编号</li>
