minor UI update

--- a/hymnchtv/faq.html
+++ b/hymnchtv/faq.html
@@ -113,7 +113,7 @@ ul li {
        <li><a href=#hymnch_0070>[20220105] User defined media configuration</a></li>
      </ul>
      <ul>
-       <li><a href=#hymnch_0080>[20210801] User defined media database configuration</a></li>
+       <li><a href=#hymnch_0080>[20220106] User defined media database configuration</a></li>
      </ul>
 
 
@@ -474,7 +474,7 @@ ul li {
   </div>
 
    <span id='hymnch_0080'></span>
-   <div class='blueText'>[[20210801] User defined media database configuration <a href=#content>{ Content }</a></div>
+   <div class='blueText'>[[20220106] User defined media database configuration <a href=#content>{ Content }</a></div>
    <div class='innerText'>Hymnchtv provides other tools to ease user in managing the user defined media record/database.
      All the user defined media configureations are stored in the hymnchtv internal database as media records. The
      included functions provided allow one user to share his media contents setup in the database with another user by
@@ -498,7 +498,7 @@ ul li {
          media record in the database. Click the <b>退出</b> button to close the media record listing window.</li>
        <li><b>数库导入</b>: Import all the media record contents as defined in the exported txt file into the hymnchtv database.
          Each media record will be saved in the respective database per the defined HymnType of the media record.</li>
-       <li><b>覆盖现有记录</b>: Check this option if you want hymnchtv to overwrite any existing media record in the
+       <li><b>覆盖现有</b>: Check this option if you want hymnchtv to overwrite any existing media record in the
          database during the database import process.</li>
          <li><b>QQ&#x2B07;</b>: Click this button to create all the QQ hymn info links, the process may take some time
          pending on the network condition; the links are used in the QQ-info search in
@@ -538,7 +538,7 @@ ul li {
        <li>After the <b>自建导出</b> operation, the actual created filename/path is shown in the <b>数据库导入文件</b> field
          and a RichText Editor is launched with the file content inserted for user verification and correction. After
          the modifications, click the <b>确认</b> to save the changes</li>
-       <li><b>覆盖现有记录</b> Check this option if you want hymnchtv to overwrite any existing media record in the
+       <li><b>覆盖现有</b> Check this option if you want hymnchtv to overwrite any existing media record in the
          database during the database import process.</li>
        <li>Click the <b>数据库导入</b> button to import the file content into the hymnchtv database.</li>
        <li>Click the <b>数库列项</b> button to check all the media records that have been imported into the hymnchtv
@@ -548,7 +548,7 @@ ul li {
         <br />* click on the error item in the list and use the media record UI to make changes before saving the
         updated record; or
         <br />* return to the exported file using the embedded RichText Editor to do the correction. Then perform the
-        <b>数据库导入</b> process with <b>覆盖现有记录</b> option checked.</li>
+        <b>数据库导入</b> process with <b>覆盖现有</b> option checked.</li>
      </ul>
      <b>Export file media record string format:</b>
      <br />Each media record string is consisted of the following parameters separated by commas:
