add Jingle File Transfer/JET

--- a/atalk/index.html
+++ b/atalk/index.html
@@ -74,14 +74,14 @@
       <li>Support <a href="./faq.html#feature_04">Stickers, Bitmoji and Emoji</a> rich content sharing via Google Gboard</li>
       <li>Send and receive files for all document types and images, with thumbnail preview and gif animation</li>
       <li>Auto accept file transfer request with max file size option</li>
-      <li>Implement <a href="./faq.html#feature_05">fault-tolerance file transfer</a> to ease and enhance file sharing reliability</li>
+      <li>Implement <a href="./faq.html#feature_05">fault-tolerance file transfer</a> algorithm, via Jingle File Transfer, Legacy In-Band/SOCK5 Bytestreams and HttpFileUpload protocols to ease and enhance file sharing reliability</li>
       <li>Enhance and harmonize UI for file sharing in chat and chatRoom</li>
 	    <li>Support share, quote and forward of messages and medias with preview prior to sending</li>
 	    <li>Support multi-instances of audio media player with functions: Play, Pause, Resume, Stop and Seek</li>
       <li>Support unread message badges in contact and chatRoom list views</li>
       <li>User selectable option for heads-up notification and quite hours</li>
-      <li>Support Text to Speech and speech recognition UI with enable option per chat session (contact and group chat)</li>
       <li>Share of social media links are tagged with thumbnail and title</li>
+      <li>Support Text to Speech and speech recognition UI with enable option per chat session (contact and group chat)</li>
       <li>XEP-0012: Last Activity time associated with contacts</li>
       <li>XEP-0048: Bookmarks for conference room and autoJoin on login</li>			  
       <li>XEP-0070: Verifying HTTP Requests via XMPP entity for user authentication without password entry</li>
@@ -90,6 +90,7 @@
 	    <li>XEP-0124: Bidirectional-streams Over Synchronous HTTP (BOSH) with Proxy support</li>
 	    <li>XEP-0178: Use of SASL EXTERNAL with TLS Certificates for client authentication</li>
       <li>XEP-0184: Message Delivery Receipts with user enable/disable option</li>
+      <li>XEP-0391: Jingle Encrypted Transports for OMEMO encrypted media file sharing</li>
       <li>Implement Jabber VoIP-PBX gateway Telephony, allowing PBX phone call via service gateway</li>
       <li><a href="./faq.html#feature_03">Multi-user chat</a> Join or create room with full room configuration support for owner</li>
       <li>Integrated captcha protected room user interface with retry on failure</li>
@@ -106,7 +107,7 @@
       <li><a href="./faq.html#account_04">In-Band Registration</a> with Captcha option support</li>
       <li>Multiple accounts creation</li>
       <li>User selectable Themes support</li>
-      <li>Multi-language UI support (Bahasa Indonesia, English, German, Portugese, Russian, and Spanish).</li>
+      <li>Multi-language UI support (Bahasa Indonesia, English, German, Portuguese, Russian, Slovak and Spanish)</li>
       <li><a href="./faq.html">Online help support</a></li>
 	</ul>
 	</div>
