--- a/atalk/index.html
+++ b/atalk/index.html
@@ -45,16 +45,19 @@
 		<div class="shadow">
 			<p align="center">
           <a href="https://github.com/cmeng-git/atalk-android">
-            <img src="img/logo_atalk.png" alt="atalk" align="inline" width="7%" style="margin:5px 30px 20px 0px"/>
+            <img src="img/logo_atalk.png" alt="atalk" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
+          </a>
+          <a href="./faq.html">
+            <img src="img/help.png" alt="atalk" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
           </a>
           <a href="https://f-droid.org/en/packages/org.atalk.android/">
-            <img src="img/fdroid-logo.png" alt="F-Droid" align="inline" width="18%" style="margin:5px 30px 20px 0px"/>
+            <img src="img/fdroid-logo.png" alt="F-Droid" align="inline" width="15%" style="margin:5px 20px 20px 0px"/>
           </a>
 			    <a href="https://play.google.com/store/apps/details?id=org.atalk.android&hl=en">
-            <img src="img/google_play.png" alt="Google PlayStore" align="inline" width="18%" style="margin:5px 30px 20px 0px"/>
+            <img src="img/google_play.png" alt="PlayStore" align="inline" width="15%" style="margin:5px 20px 20px 0px"/>
 			    </a>
 				  <a href="https://youtu.be/9w5WwphzgBc">
-            <img src="img/youtube.png" alt="YouTube" align="inline" width="9%" style="margin:5px 30px 20px 0px"/>
+            <img src="img/youtube.png" alt="YouTube" align="inline" width="5%" style="margin:5px 0px 20px 0px"/>
 				</a>
 			</p>
 		</div>
@@ -90,6 +93,7 @@
 	    <li>XEP-0124: Bidirectional-streams Over Synchronous HTTP (BOSH) with Proxy support</li>
 	    <li>XEP-0178: Use of SASL EXTERNAL with TLS Certificates for client authentication</li>
       <li>XEP-0184: Message Delivery Receipts with user enable/disable option</li>
+      <li>XEP-0251: Jingle Session Transfer: Support both Unattended and Attended call transfer</li>
       <li>XEP-0391: Jingle Encrypted Transports for OMEMO encrypted media file sharing</li>
       <li>Implement Jabber VoIP-PBX gateway Telephony, allowing PBX phone call via service gateway</li>
       <li><a href="./faq.html#feature_03">Multi-user chat</a> Join or create room with full room configuration support for owner</li>
