--- a/atalk/index.html
+++ b/atalk/index.html
@@ -48,7 +48,7 @@
             <img src="img/logo_atalk.png" alt="atalk" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
           </a>
           <a href="./faq.html">
-            <img src="img/help.png" alt="atalk" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
+            <img src="img/help.png" alt="FAQ" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
           </a>
           <a href="https://f-droid.org/en/packages/org.atalk.android/">
             <img src="img/fdroid-logo.png" alt="F-Droid" align="inline" width="15%" style="margin:5px 20px 20px 0px"/>
